<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:id="@+id/rv_linux"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">
        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginEnd="16dp"
            android:src="@android:color/darker_gray"
            android:contentDescription="@string/logo" />

        <LinearLayout
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/img_item_photo"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/name_linux"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_item_name"/>

            <TextView
                android:text="@string/popularity_rank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_item_rank"/>
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>